# src/controllers/taskController.js
@@ -1,8 +1,13 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
-  res.json(tasks);
+  try{
+      const { completed } = req.query;
+      const tasks = await taskService.getAllTasks(completed);
+      res.json(tasks);
+  } catch(error){
+    next(error);
+  }
 }
 
 export async function createTask(req, res, next) {
