# src/middleware/validateTask.js
@@ -1,6 +1,13 @@
-import { body } from 'express-validator';
+import { body,query } from 'express-validator';
 import { checkValidationResults } from './handleValidationErrors.js';
 
+export const validateTaskQuery = [
+  query('completed')
+  .optional()
+  .isBoolean()
+  .withMessage('completed must be true or false'),
+  checkValidationResults,
+];
 export const validateTask = [
   body('title')
     .trim()
